修改登录界面

--- a/src/main/webapp/seller_login.html
+++ b/src/main/webapp/seller_login.html
@@ -19,95 +19,12 @@
 </head>
 
 <body>
-<!-- Loader-->
-<div id="page-preloader"><span class="spinner border-t_second_b border-t_prim_a"></span>
-</div>
-<!-- Loader end-->
-
-
-<!-- ==========================-->
-<!-- FULL SCREEN MENU-->
-<!-- ==========================-->
-<div class="wrap-fixed-menu" id="fixedMenu">
-    <button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>
-    <nav class="fullscreen-center-menu">
-        <!--左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
-    </nav>
-</div>
-
-<div class="l-theme animated-css" data-header="sticky" data-header-top="200" data-canvas="container">
-    <!-- ==========================-->
-    <!-- SEARCH MODAL-->
-    <!-- ==========================-->
-    <div class="header-search open-search">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-                    <div class="navbar-search">
-                        <form class="search-global">
-                            <input class="search-global__input" type="text" placeholder="Type to search"
-                                   autocomplete="off" name="s" value="">
-                            <button class="search-global__btn"><i class="icon stroke icon-Search"></i>
-                            </button>
-                            <div class="search-global__note">Begin typing your search above and press return to
-                                search.
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <button class="search-close close" type="button"><i class="fa fa-times"></i>
-        </button>
-    </div>
     <header class="header-1 header header-color-black header-topbar-hidden header-boxed-width navbar-fixed-top header-background-trans header-navibox-1-left header-navibox-2-right">
-        <div class="container container-boxed-width">
-            <nav class="navbar" id="nav">
-                <div class="container">
-                    <div class="header-navibox-1">
-                        <!-- Desctop Trigger Start-->
-                        <!--<button class="menu-mobile-button js-toggle-screen toggle-menu-button"><i
-                                class="toggle-menu-button-icon"><span></span><span></span><span></span><span></span><span></span><span></span></i>
-                        </button>-->
-                        <!-- Desctop Trigger End-->
-                        <!--<ul class="main-menu yamm nav navbar-nav">
-                            &lt;!&ndash;logo左边导航栏////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;
-                            <li><a href="#"><h5>主 页</h5></a>
-                            </li>
-                            <li><a href="#"><h5>店铺信息</h5></a>
-                            </li>
-                            <li><a href="#"><h5>评论管理</h5></a>
-                            </li>
-                        </ul>-->
-                    </div>
-                    <div class="header-navibox-2">
-                        <!--logo右边导航栏///////////////////////////////////////////////////////////////////////////////////////-->
-                        <!--<ul class="nav navbar-nav clearfix vcenter">
-                            <li><a href="#"><h5>客服</h5></a></li>
-                            &lt;!&ndash;个人资料/////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;
-                            <li><a href="#"><h5>个人信息</h5></a>
-                            </li>
-                            &lt;!&ndash; <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
-                                                                         aria-hidden="true"></i></a><span
-                                    class="header-cart-count bg-primary">0</span></span>
-                            </li> &ndash;&gt;
-                        </ul>
-                        <ul class="nav-language list-inline">
-                            &lt;!&ndash;右上角的登陆、退出按钮/////////////////////////////////////////////////////////////&ndash;&gt;
-                            <li><a href="seller_login.html">登 陆</a>
-                            </li>
-                            <li><a href="#">退出</a>
-                            </li>
-                        </ul>-->
-                        <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
-                        <a class="navbar-brand scroll" href="items-Homepage.html">
-                            <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
-                            <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
-                            <img class="scroll-logo hidden-xs" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
-                        </a>
-                    </div>
-                </div>
-            </nav>
+        <div class="header-navibox-2">
+            <a class="navbar-brand scroll" href="#">
+                <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
+                <img class="normal-logo" src="static/wt/images/WeTao_logo_small.jpg" alt="logo">
+            </a>
         </div>
     </header>
     <!-- end .header-->
@@ -119,8 +36,7 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><h2>登陆微淘商家后台</h2>
-                            </li>
+                            <center><li><h2>登陆微淘商家后台</h2></li></center>
                             <p>&nbsp;</p>
                         </ol>
                     </div>
@@ -131,9 +47,9 @@
                 	<div class="col-md-5 col-md-offset-1" style="width: 1500px">
                 		<div class="tabs-type-2"  style="width:1000px;float:left">
                     		<ul class="nav">
-                        		<li class="active"><a href="#description" data-toggle="tab" style="font-size:20px">登 陆 (Login)</a>
+                        		<li class="active"><a href="#description" data-toggle="tab" style="font-size:20px">登&nbsp;&nbsp;陆</a>
                             	</li>
-                            	<li><a href="#sizing" data-toggle="tab" style="font-size:20px">注 册 (Register)</a>
+                            	<li><a href="#sizing" data-toggle="tab" style="font-size:20px">注&nbsp;&nbsp;册</a>
                             	</li>
                      		</ul>
                         	<div class="tab-content">
@@ -159,15 +75,13 @@
                             			<div class="woocommerce-checkout-review-order" style="float:right;margin-right: 300px">
 												<div class="form-row place-order">
                                                     <p>&nbsp;</p>
-													<input type="submit" class="button alt" value="登 陆 login" data-value="Place order" onclick="login()" style="width: 400px"/>
+													<input type="submit" class="button alt" value="登&nbsp;&nbsp;&nbsp;&nbsp;陆" data-value="Place order" onclick="login()" style="width: 400px"/>
                                     			</div>
                             			</div>
                         			</form>
                 				</div>
                 				<!-- 注册界面描绘################################################ -->
 								<div class="tab-pane fade" id="sizing">
-                        			<!--<form id="register" method="post" class="checkout woocommerce-checkout" action="checkout/"
-                              				enctype="multipart/form-data" _lpchecked="1">-->
                             			<div class="col2-set" id="seller_register">
                                 			<div class="col-1">
                                                     <h3>请输入个人信息</h3>
@@ -252,10 +166,9 @@
                             			<div class="woocommerce-checkout-review-order">
                                     			<div class="form-row place-order">
                                                     <p>&nbsp;</p>
-                                        			<input type="button" class="button alt" value="注 册 商 家 register" data-value="Place order" onclick="register()" style="line-height:1.3;border:0;width:450px;float: right;margin-right: 250px"/>
+                                        			<input type="button" class="button alt" value="注 册 商 家" data-value="Place order" onclick="register()" style="line-height:1.3;border:0;width:350px;float: right;margin-right: 250px"/>
                                     			</div>
                             			</div>
-                        			<!--</form>-->
                             	</div>
                         	</div>
                      	</div>
