--- a/src/main/webapp/seller_message.html
+++ b/src/main/webapp/seller_message.html
@@ -38,20 +38,14 @@
         <!--左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
         <div id="dl-menu" class="dl-menuwrapper">
             <ul class="dl-menu menu-item list-unstyled">
-
-
                 <li class="has-children ">
                     <a href="#"><span>订单管理 <i class="arrow_carrot-right"></i> </span></a>
                     <ul class="dl-submenu">
-
                         <li><a href="Unfilled-Order.html"><span>待发货</span></a></li>
                         <li><a href="Sent-Order.html"><span>已发货</span></a></li>
                         <li><a href="Achieve-Order.html"><span>已完成</span></a></li>
-
-
                     </ul>
                 </li>
-                
                 <li class="has-children ">
                     <a href="shop-1.html"><span>售后 <i class="arrow_carrot-right"></i>  </span></a>
                     <ul class="dl-submenu">
@@ -61,12 +55,8 @@
                 </li>
             </ul>
         </div>
-
-
     </nav>
-
 </div>
-
 
 <div class="l-theme animated-css" data-header="sticky" data-header-top="200" data-canvas="container">
     <!-- ==========================-->
@@ -144,10 +134,6 @@
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
-                            <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
-                                                                         aria-hidden="true"></i></a><span
-                                    class="header-cart-count bg-primary">0</span></span>
-                            </li> -->
                         </ul>
                         <ul class="nav-language list-inline">
                             <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
@@ -175,8 +161,7 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><h2>商家个人信息</h2>
-                            </li>
+                            <center><li><h2>商家个人信息</h2></li></center>
                             <p>&nbsp;</p>
                         </ol>
                     </div>
