用户页面修改

--- a/src/main/webapp/display.html
+++ b/src/main/webapp/display.html
@@ -113,7 +113,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-md-5">
                         <!--左边第一行字/////////////////////////////////////////////////////////////////////////////////////////-->
-                        <h1 class="section-about__title">Welcome<br>to My Page!</h1>
+                        <!--<h1 class="section-about__title">Welcome to My Page!</h1>-->
                     </div>
                 </div>
                 <div class="img-group">
@@ -127,7 +127,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <!--个人信息描述模块/////////////////////////////////////////////////////////////////////////////////////////-->
-                        <h2>个人信息 Personal Information</h2><br><br>
+                        <h2>个人信息</h2><br><br>
                         <ul class="list list-mark2" id="stu">
                         </ul>
                         <a href="personal.html">
