--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -97,7 +97,7 @@
                     <!-- end .wrap-breadcrumb-->
                     <div class="section-title-page section-title-page_mod-a">
                         <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">R e g i s t e r</h1>
+                <!--        <h1 class="ui-title-page">R e g i s t e r</h1>-->
                     </div>
                 </div>
             </div>
