--- a/src/main/webapp/change_password.html
+++ b/src/main/webapp/change_password.html
@@ -24,77 +24,6 @@
 <!-- Loader end-->
 
 
-<!-- ==========================-->
-<!-- FULL SCREEN MENU-->
-<!-- ==========================-->
-<!--<div class="wrap-fixed-menu" id="fixedMenu">-->
-
-
-    <!--<button type="button" class="fullmenu-close"><i class="fa fa-times"></i></button>-->
-
-    <!--<nav class="fullscreen-center-menu">-->
-
-        <!--&lt;!&ndash;左上角隐藏的导航栏入口/////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////&ndash;&gt;-->
-        <!--<div id="dl-menu" class="dl-menuwrapper">-->
-            <!--<ul class="dl-menu menu-item list-unstyled">-->
-
-
-                <!--<li class="has-children ">-->
-                    <!--<a href="#"><span>Home <i class="arrow_carrot-right"></i> </span></a>-->
-                    <!--<ul class="dl-submenu">-->
-
-                        <!--<li><a href="home.html"><span>Home 1</span></a></li>-->
-                        <!--<li><a href="home-2.html"><span>Home 2</span></a></li>-->
-
-
-                    <!--</ul>-->
-                <!--</li>-->
-                <!--<li><a href="display.html"><span>about</span></a></li>-->
-                <!--<li><a href="lookbook.html"><span>lookbook</span></a></li>-->
-
-                <!--<li>-->
-                    <!--<a href="shop-1.html"><span>shop <i class="arrow_carrot-right"></i>  </span></a>-->
-
-                    <!--<ul class="dl-submenu">-->
-
-                        <!--<li><a href="shop-1.html"><span>Catalog Grid 1</span></a></li>-->
-                        <!--<li><a href="shop.html"><span>Catalog Grid 2</span></a></li>-->
-                        <!--<li><a href="shop-2-list.html"><span>Catalog List</span></a></li>-->
-                        <!--<li><a href="shop-single-1.html"><span>Product page 1</span></a></li>-->
-                        <!--<li><a href="shop_single.html"><span>Product page 2</span></a></li>-->
-                        <!--<li><a href="shop-single-3.html"><span>Product page 3</span></a></li>-->
-                        <!--<li><a href="cart.html"><span>Cart page</span></a></li>-->
-                        <!--<li><a href="checkout.html"><span>Checkout page </span></a></li>-->
-
-                    <!--</ul>-->
-
-                <!--</li>-->
-
-
-                <!--<li class="has-children">-->
-                    <!--<a href="#"><span> Blog <i class="arrow_carrot-right"></i> </span></a>-->
-                    <!--<ul class="dl-submenu">-->
-
-                        <!--<li><a href="blog-main.html"><span>Blog main</span></a></li>-->
-                        <!--<li><a href="blog-main-2.html"><span>Blog main 2</span></a></li>-->
-                        <!--<li><a href="blog-main-3.html"><span>Blog main 3</span></a></li>-->
-                        <!--<li><a href="blog-post.html"><span>Blog post </span></a></li>-->
-
-                    <!--</ul>-->
-                <!--</li>-->
-
-                <!--<li><a href="typography.html"><span>typography</span></a></li>-->
-                <!--<li><a href="contact.html"><span>contact</span></a></li>-->
-
-
-            <!--</ul>-->
-
-        <!--</div>-->
-
-
-    <!--</nav>-->
-
-<!--</div>-->
 
 
 <div class="l-theme animated-css" data-header="sticky" data-header-top="200" data-canvas="container">
@@ -168,6 +97,7 @@
     </header>
     <!-- end .header-->
     <div class="l-main-content l-main-content_w-border">
+
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
@@ -181,7 +111,7 @@
                     <!-- end .wrap-breadcrumb-->
                     <div class="section-title-page section-title-page_mod-a">
                         <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">Change Password</h1>
+   <!--                     <h1 class="ui-title-page">Change Password</h1>-->
                     </div>
                 </div>
             </div>
@@ -191,7 +121,7 @@
 
                     <div class="woocommerce">
                         <!--第三行小字提醒/////////////////////////////////////////////////////////////-->
-                        <div class="woocommerce-info"><h5>*填写注册人姓名和历史收货人电话才能证明您是该账户的拥有者&nbsp; &nbsp;<br><br>*信息核查成功后，我们将为您重置密码</h5>
+                        <div class="woocommerce-info"><h5>*填写账号和您的当前电话才能证明您是该账户的拥有者&nbsp; &nbsp;<br><br>*信息核查成功后，我们将为您重置密码</h5>
                             </div>
                         <form class="checkout_coupon" method="post" style="display:none">
                             <p class="form-row form-row-first">
@@ -231,38 +161,17 @@
                                             <label>确认密码(Confirm your password)</label>
                                             <input type="password" class="input-text " name="uPassword2" id="uPassword2" onblur="recheckpassword()">
                                         </p>
-
+                                    </div>
+                                    <div>
+                                            <input type="button" class="button alt" id="place_order" value="确 认 confirm" onclick="checkchangepassword()" data-value="Place order"/>
                                     </div>
                                 </div>
 
 
 
-                                <div class="col-2">
-                                    <div class="woocommerce-shipping-fields">
-                                        <h3>淘 不出掌心</h3>
-                                        <p class="form-row form-row">
-                                            <!--<label class="">这里放微淘的骚粉大LOGO</label>-->
-                                            <!--LOGO模块/////////////////////////////////////////////////////////////-->
-                                            <div style="width:500px ;height: 500px">
-                                        <img src="static/images/WeTao_logo_big.jpg">
-                                    </div>
-                                        </p>
-                                    </div>
-                                </div>
 
 
 
-                            </div>
-                            <div id="order_review" class="woocommerce-checkout-review-order">
-
-                                <div id="payment" class="woocommerce-checkout-payment">
-
-                                    <div class="form-row place-order">
-
-                                            <!--确认按钮模块/////////////////////////////////////////////////////////////-->
-                                        <input type="button" class="button alt" id="place_order" value="确 认 confirm" onclick="checkchangepassword()" data-value="Place order"/>
-                                    </div>
-                                </div>
                             </div>
                         </form>
                     </div>
