--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="section-title-page section-title-page_mod-a">
                         <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page"><strong>L o g i n</strong></h1>
+                      <!--  <h1 class="ui-title-page"><strong>L o g i n</strong></h1>-->
                     </div>
                     <div class="woocommerce-info">没有账号?&nbsp; &nbsp;
                         <!--点击此处跳转到登陆界面/////////////////////////////////////////////////////////////-->
