--- a/src/main/webapp/personal.html
+++ b/src/main/webapp/personal.html
@@ -107,15 +107,13 @@
             <div class="row">
                 <div class="col-xs-12">
                     <div class="wrap-breadcrumb">
-                        <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <li><h4>Hi~<br/>&nbsp;&nbsp;<h4 id="uuId"></h4></h4></li>
-                        </ol>
+                            <h4>你好~</h4><h4 id="uuId"></h4>
                     </div>
                     <!-- end .wrap-breadcrumb-->
                     <div class="section-title-page section-title-page_mod-a">
                         <!--第二行文字/////////////////////////////////////////////////////////////-->
-                        <h1 class="ui-title-page">Update Personal Information</h1>
+                 <!--       <h1 class="ui-title-page">Update Personal Information</h1>-->
                     </div>
                 </div>
             </div>
