--- a/src/main/webapp/items-Homepage.html
+++ b/src/main/webapp/items-Homepage.html
@@ -161,11 +161,11 @@
             <div class="l-main-content l-main-content_w-border">
                 <div class="row">
                     <p>&nbsp;</p>
-                    <h2 style="float: left;margin-left: 160px">数据统计</h2>
+                    <center><h2>数 据 统 计</h2></center>
                     <p>&nbsp;</p><p>&nbsp;</p>
 
-                    <div class="col-md-5 col-md-offset-1" style="width: 1500px">
-                        <div class="tabs-type-2"  style="width:1200px;float:left;margin-left: 50px">
+                    <div class="col-md-5 col-md-offset-1" style="width: 100%">
+                        <div class="tabs-type-2"  style="width:1200px;float:left;margin-left: 150px">
                             <ul class="nav">
                                 <li class="active"><a href="#chartmain" data-toggle="tab" style="font-size:20px">销量Top10</a>
                                 </li>
