--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -75,12 +75,12 @@
                         <!--用户个人信息入口///////////////////////////////////////////////////////////////////////////////////////-->
                         <li><a href="order.html"><h5>我 的 订 单</h5></a>
                         </li>
-                            <li><span class="header-cart">
+                        <li><span class="header-cart">
 
                                 <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
                                     <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
                                         </span>
-                            </li>
+                        </li>
                     </ul>
                     <ul class="nav-language list-inline">
                         <!--点击，进入个人信息展示display页面/////////////////////////////////////////////////////////////-->
@@ -240,10 +240,12 @@
                     <div class="b-goods b-goods-3">
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">shoes</div>
-                            <div class="b-goods__title">时尚潮鞋
-                            <p style="color: #2a2d32">Nike&nbsp;Adidas&nbsp;<br>PUMA&nbsp;Reebok</p>
+                            <div class="b-goods__title">
+                                <a href="shop.html?search='鞋'">时尚潮鞋</a>
+                                <a href="shop.html?search='鞋'"><p style="color: #2a2d32">Nike&nbsp;Adidas&nbsp;<br>PUMA&nbsp;Reebok
+                                </p></a>
                             </div>
-                                <p>SKECHERS&nbsp;&nbsp; New balance</p>
+                            <a href="shop.html?search='鞋'"><p>SKECHERS&nbsp;&nbsp; New balance</p></a>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
@@ -253,40 +255,49 @@
                     <div class="b-goods b-goods-3">
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">phone</div>
-                            <div class="b-goods__title">科技手机
-                                <p style="color: #2a2d32">HUAWEI&nbsp;&nbsp;&nbsp;Mi<br>Oppo&nbsp;&nbsp;iPhone</p>
+                            <div class="b-goods__title">
+                                <a href="shop.html?search='手机'">科技手机</a>
+                                <a href="shop.html?search='手机'"><p style="color: #2a2d32">HUAWEI&nbsp;&nbsp;&nbsp;Mi<br>Oppo&nbsp;&nbsp;iPhone
+                                </p></a>
                             </div>
                             <p>vivo&nbsp;&nbsp;&nbsp;one plus</p>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <img class="img-responsive" src="static/images/timg.jpg" alt="img">
+                            <a href="shop.html?search='手机'">
+                                <img class="img-responsive" src="static/images/timg.jpg" alt="img"></a>
                         </div>
                     </div>
                     <div class="b-goods b-goods-3">
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">dress</div>
-                            <div class="b-goods__title">轻奢女装
-                                <p style="color: #2a2d32">FENDI&nbsp;Dior<br>D&G&nbsp;&nbsp;LV</p>
+                            <div class="b-goods__title">
+                                <a href="shop.html?search='女装'">轻奢女装</a>
+                                <a href="shop.html?search='女装'"><p style="color: #2a2d32">FENDI&nbsp;Dior<br>D&G&nbsp;&nbsp;LV
+                                </p></a>
                             </div>
                             <p>HERMES&nbsp;&nbsp;gucci</p>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <img class="img-responsive" src="static/images/timg3.jpg" alt="img">
+                            <a href="shop.html?search='女装'"><img class="img-responsive" src="static/images/timg3.jpg"
+                                                                 alt="img"></a>
                         </div>
                     </div>
                     <div class="b-goods b-goods-3">
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">dress</div>
-                            <div class="b-goods__title">绅士男装
-                                <p style="color: #2a2d32">AMANI&nbsp;BVGARI<br>Calvin Klein</p>
+                            <div class="b-goods__title">
+                                <a href="shop.html?search='男装'">绅士男装</a>
+                                <a href="shop.html?search='男装'"><p style="color: #2a2d32">AMANI&nbsp;BVGARI<br>Calvin
+                                    Klein</p></a>
                             </div>
                             <p>PRADA&nbsp;&nbsp;BURBERRY</p>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <img class="img-responsive" src="static/images/timg4.jpg" alt="img">
+                            <a href="shop.html?search='男装'">
+                                <img class="img-responsive" src="static/images/timg4.jpg" alt="img"></a>
                         </div>
                     </div>
                 </div>
@@ -599,7 +610,7 @@
                             <div class="row">
                                 <div class="col-md-5">
                                     <!--<ul class="footer-list list-unstyled">-->
-                                        <ul class="list list-mark-3">
+                                    <ul class="list list-mark-3">
                                         <!--关于我们入口//////////////////////////////////////////////////////////////////////////////-->
                                         <li class="footer-list__item"><a class="footer-list__link">林泽荣</a>
                                         </li>
@@ -612,14 +623,14 @@
                                     </ul>
                                 </div>
                                 <div class="col-md-6">
-                                        <ul class="list list-mark-3">
+                                    <ul class="list list-mark-3">
                                         <li class="footer-list__item"><a class="footer-list__link">姚灿鹏</a>
                                         </li>
                                         <li class="footer-list__item"><a class="footer-list__link">刘忠浩</a>
                                         </li>
                                         <li class="footer-list__item"><a class="footer-list__link">黄坚泽</a>
                                         </li>
-                                        </ul>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
