--- a/src/main/webapp/items-Homepage.html
+++ b/src/main/webapp/items-Homepage.html
@@ -140,11 +140,7 @@
                             </li>
                         </ul>
                         <ul class="nav-language list-inline">
-                            <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="seller_login.html">登 陆</a>
-                            </li>
-                            <li><a onclick="exit()">退 出</a>
-                            </li>
+                            <a onclick="exit()">退 出</a>
                         </ul>
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
