'添加商品js价格验证、商品展示页面库存和价格、Home界面修改'

--- a/src/main/webapp/StoreDetails.html
+++ b/src/main/webapp/StoreDetails.html
@@ -145,18 +145,20 @@
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
+                            <li><a onclick="exit()"><h5 style="color: grey">退 出</h5></a>
+                            </li>
                             <!-- <li><span class="header-cart"><a href="#"><i class="icon fa fa-shopping-cart"
                                                                          aria-hidden="true"></i></a><span
                                     class="header-cart-count bg-primary">0</span></span>
                             </li> -->
                         </ul>
-                        <ul class="nav-language list-inline">
-                            <!--右上角的登陆、退出按钮/////////////////////////////////////////////////////////////-->
-                            <li><a href="seller_login.html">登 陆</a>
-                            </li>
-                            <li><a onclick="exit()">退 出</a>
-                            </li>
-                        </ul>
+                        <!--<ul class="nav-language list-inline">-->
+                            <!--&lt;!&ndash;右上角的登陆、退出按钮/////////////////////////////////////////////////////////////&ndash;&gt;-->
+                            <!--<li><a href="seller_login.html">登 陆</a>-->
+                            <!--</li>-->
+                            <!--<li><a onclick="exit()"></a>-->
+                            <!--</li>-->
+                        <!--</ul>-->
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
@@ -176,7 +178,7 @@
                     <div class="wrap-breadcrumb">
                         <ol class="breadcrumb">
                             <!--第一行文字/////////////////////////////////////////////////////////////-->
-                            <<h2>店铺详情</h2>
+                            <h2>店铺详情</h2>
                             <p>&nbsp;</p>
                         </ol>
                     </div>
