--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -66,30 +66,36 @@
                         <!--收藏夹入口///////////////////////////////////////////////////////////////////////////////////////-->
                         <li><a href="collection.html"><h5>收 藏</h5></a>
                         </li>
+                        <li><a href="order.html"><h5>我 的 订 单</h5></a>
+                        </li><li><h5><a href="display.html">个人信息</a></h5>
+                    </li>
                     </ul>
                 </div>
                 <div class="header-navibox-2">
                     <ul class="nav navbar-nav clearfix vcenter">
-                        <li><a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
+                        <li>
+                            <a class="btn_header_search" href="#"><i class="icon fa fa-search"></i></a>
+                        </li>
+                        <li><h5></h5>
                         </li>
                         <!--用户个人信息入口///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li><a href="order.html"><h5>我 的 订 单</h5></a>
-                        </li>
-                        <li><span class="header-cart">
 
+                        <li>
+                            <span class="header-cart">
                                 <!--购物车模块///////////////////////////////////////////////////////////////////////////////////////-->
-                                    <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
-                                        </span>
+                                <a href="cart.html"><i class="icon icon_cart_alt" aria-hidden="true"></i></a>
+                            </span>
+                        </li>
+                        <li class="active"><h5>
+                            <a onclick="exit()">退出</a></h5>
                         </li>
                     </ul>
-                    <ul class="nav-language list-inline">
+                    <!--<ul class="nav-language list-inline">-->
                         <!--点击，进入个人信息展示display页面/////////////////////////////////////////////////////////////-->
-                        <li><a href="display.html">个人信息</a>
-                        </li>
+
                         <!--退出登陆按钮///////////////////////////////////////////////////////////////////////////////////////-->
-                        <li class="active"><a onclick="exit()">注销</a>
-                        </li>
-                    </ul>
+
+                    <!--</ul>-->
                     <!--正中间的Logo标志///////////////////////////////////////////////////////////////////////////////////////-->
                     <!--点击，重新进入主页/////////////////////////////////////////////////////////////-->
                     <a class="navbar-brand scroll" href="home.html">
@@ -256,15 +262,15 @@
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">phone</div>
                             <div class="b-goods__title">
-                                <a href="shop.html?search='手机'">科技手机</a>
-                                <a href="shop.html?search='手机'"><p style="color: #2a2d32">HUAWEI&nbsp;&nbsp;&nbsp;Mi<br>Oppo&nbsp;&nbsp;iPhone
+                                <a href="shop.html?search=手机">科技手机</a>
+                                <a href="shop.html?search=手机"><p style="color: #2a2d32">HUAWEI&nbsp;&nbsp;&nbsp;Mi<br>Oppo&nbsp;&nbsp;iPhone
                                 </p></a>
                             </div>
                             <p>vivo&nbsp;&nbsp;&nbsp;one plus</p>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <a href="shop.html?search='手机'">
+                            <a href="shop.html?search=手机">
                                 <img class="img-responsive" src="static/images/timg.jpg" alt="img"></a>
                         </div>
                     </div>
@@ -272,15 +278,15 @@
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">dress</div>
                             <div class="b-goods__title">
-                                <a href="shop.html?search='女装'">轻奢女装</a>
-                                <a href="shop.html?search='女装'"><p style="color: #2a2d32">FENDI&nbsp;Dior<br>D&G&nbsp;&nbsp;LV
+                                <a href="shop.html?search=女装">轻奢女装</a>
+                                <a href="shop.html?search=女装"><p style="color: #2a2d32">FENDI&nbsp;Dior<br>D&G&nbsp;&nbsp;LV
                                 </p></a>
                             </div>
                             <p>HERMES&nbsp;&nbsp;gucci</p>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <a href="shop.html?search='女装'"><img class="img-responsive" src="static/images/timg3.jpg"
+                            <a href="shop.html?search=女装"><img class="img-responsive" src="static/images/timg3.jpg"
                                                                  alt="img"></a>
                         </div>
                     </div>
@@ -288,15 +294,15 @@
                         <div class="b-goods__inner">
                             <div class="b-goods__categorie">dress</div>
                             <div class="b-goods__title">
-                                <a href="shop.html?search='男装'">绅士男装</a>
-                                <a href="shop.html?search='男装'"><p style="color: #2a2d32">AMANI&nbsp;BVGARI<br>Calvin
+                                <a href="shop.html?search=男装">绅士男装</a>
+                                <a href="shop.html?search=男装"><p style="color: #2a2d32">AMANI&nbsp;BVGARI<br>Calvin
                                     Klein</p></a>
                             </div>
                             <p>PRADA&nbsp;&nbsp;BURBERRY</p>
                             <span class="b-goods__number">更多品牌尽在微淘</span>
                         </div>
                         <div class="b-goods__img">
-                            <a href="shop.html?search='男装'">
+                            <a href="shop.html?search=男装">
                                 <img class="img-responsive" src="static/images/timg4.jpg" alt="img"></a>
                         </div>
                     </div>
