--- a/src/main/webapp/items-Homepage.html
+++ b/src/main/webapp/items-Homepage.html
@@ -138,10 +138,12 @@
                             <!--个人资料/////////////////////////////////////////////////////////////////////////////////////////-->
                             <li><a href="seller_message.html"><h5>个人信息</h5></a>
                             </li>
+                            <li><a onclick="exit()"><h5 style="color: grey">退 出</h5></a>
+                            </li>
                         </ul>
-                        <ul class="nav-language list-inline">
-                            <a onclick="exit()">退 出</a>
-                        </ul>
+                        <!--<ul class="nav-language list-inline">-->
+                            <!--<a onclick="exit()">退 出</a>-->
+                        <!--</ul>-->
                         <!--点击主logo回到home.html主页/////////////////////////////////////////////////////////////////////-->
                         <a class="navbar-brand scroll" href="items-Homepage.html">
                             <!--导航栏最中间的logo/////////////////////////////////////////////////////////////////////////////////-->
