--- a/src/main/webapp/items-Homepage.html
+++ b/src/main/webapp/items-Homepage.html
@@ -165,14 +165,14 @@
                     <div class="col-md-5 col-md-offset-1" style="width: 100%">
                         <div class="tabs-type-2"  style="width:1200px;float:left;margin-left: 150px">
                             <ul class="nav">
-                                <li class="active"><a href="#chartmain" data-toggle="tab" style="font-size:20px">销量Top10</a>
+                                <li class="active"><a href="#chartmain2" data-toggle="tab" style="font-size:20px">近半年销售额</a>
                                 </li>
-                                <li><a href="#chartmain2" data-toggle="tab" style="font-size:20px">近半年销售额</a>
+                                <li ><a href="#chartmain" data-toggle="tab" style="font-size:20px">销量Top10</a>
                                 </li>
                             </ul>
                             <div class="tab-content">
-                                <div class="tab-pane fade in active" id="chartmain" style="width:1200px; height: 500px;"></div>
-                                <div class="tab-pane fade" id="chartmain2" style="width:1200px; height: 500px;"></div>
+                                <div class="tab-pane fade  in active" id="chartmain2" style="width:1200px; height: 500px;"></div>
+                                <div class="tab-pane fade" id="chartmain" style="width:1200px; height: 500px;"></div>
                             </div>
                         </div>
                     </div>
